# mockio

./: README.md  mockio.cabal
app/: Main.hs
src/: Dice.hs  Hello.hs  MockIO.hs
src/MockIO/: IO.hs  Simple.hs
test/: DiceSpec.hs  HelloSpec.hs
