name:                mockio
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://commentedcode.org/blog/2017/08/21/better-io-testing-through-monads
license:             PublicDomain
author:              Jeff Parent
maintainer:          jeff@commentedcode.org
copyright:           2017 Jeff Parent
category:            Example
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MockIO
                     , MockIO.IO
                     , MockIO.Simple
                     , Dice
                     , Hello
  build-depends:       base >= 4.7 && < 5
                     , random
                     , mtl
  default-language:    Haskell2010

executable mockio
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , mockio
  default-language:    Haskell2010

test-suite mockio-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mockio
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://commentedcode.org/git/blog/mockio.git
